# HRI_Class_Repo

./: README.md  follower.cpp  map_navigation.cpp  obstacle_advoidance.cpp
Final_project/: main.cpp  map_navigation.h  voice_teleop.h
Final_project/display_image/: CMakeLists.txt  display_image.h  package.xml
Final_project/display_image/scripts/: display_image.py
Final_project/display_image/src/: display_image.cpp
Final_project/line_detection/: CMakeLists.txt  package.xml
Final_project/line_detection/include/line_detection/: line_detection.h
Final_project/line_detection/src/: corner_test.cpp  find_hsv.cpp  line_detection.cpp  line_detection_backup.cpp  line_detection_backup.h  line_detector_test.cpp  obstacle_avoidance.cpp
Final_project/line_detection/src/scripts/: follower_opencv.py  line_detector-no_opencv.py  line_detector.py  opencv_imshow.py
Final_project/pozyx_localization/: CMakeLists.txt  Interaction.py  ReadyToLocalize.py  StartLocalizing.py  package.xml
Final_project/pozyx_localization/launch/: pozyx_localization_node.launch
Final_project/pozyx_localization/scripts/: FilterData.py  Interaction.py  StartLocalizing.py
Final_project/researcher_input/: CMakeLists.txt  package.xml
Final_project/researcher_input/launch/: researcher_input_node.launch
Final_project/researcher_input/scripts/: researcher_input.py
Final_project/turn_to_trainer/: turn_to_trainer.cpp  turn_to_trainer.h
